force-app/main/default/objects/Issued_Coupon__c/Issued_Coupon__c.object-meta.xml
<CustomObject>
    <label>Promotional Offer</label>
    <nameField>
        <label>Issued Coupon</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotional Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>