force-app/main/default/objects/Issued_Coupon__c/fields/Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Valid_Upto__c</fullName>
    <formula>Coupon__r.Valid_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid UpTo</label>
    <type>Date</type>
</CustomField>